# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: app.py
page_analyzer/templates/: index.html  url_id.html  urls.html
